# magen

./: .gitignore  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-03-15-magen-upgrade.md
docs/superpowers/specs/: 2026-03-15-magen-upgrade-design.md
src/: App.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  overlay.rs  state.rs  tray.rs
src-tauri/src/commands/: commands.rs
src-tauri/src/models/: alert.rs  city.rs  mod.rs  profile.rs  settings.rs
src-tauri/src/services/: alert_processor.rs  mod.rs  notification.rs  poller.rs  sound.rs
src/components/: AlertCard.tsx  CityFilter.tsx  CityList.tsx  CountdownTimer.tsx  Layout.tsx  StatusBadge.tsx
src/components/map/: AlertBanner.tsx  MapApp.tsx  MapContainer.tsx  ProfileEditor.tsx  ProfileOverlay.tsx  SettingsPanel.tsx  StatusOverlay.tsx  TimelineBar.tsx
src/i18n/: en.json  he.json  index.ts  ru.json
src/lib/: alertTypes.ts
src/overlay/: OverlayAlert.tsx  OverlayApp.tsx  SvgMap.tsx
src/store/: alertStore.ts  cityStore.ts  historyStore.ts  profileStore.ts  settingsStore.ts
src/styles/: globals.css
src/views/: Dashboard.tsx  History.tsx  MapView.tsx  Onboarding.tsx  Settings.tsx
