[package]
name = "magen"
version = "0.1.0"
description = "Red alert notification app for Israel"
authors = ["LordKnish"]
edition = "2021"

[lib]
name = "magen_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.12", features = ["rustls-tls", "socks", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
rodio = "0.20"
chrono = { version = "0.4", features = ["serde"] }
